<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">YY锁</string>
    <string name="input_password">输入密码</string>
    <string name="input_info">请输入密码</string>
    <string name="input_error">您输入的密码错误,请重新输入</string>
    <string name="app_encrypt">程序加密</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_newpassword">请输入新密码</string>
    <string name="modify_newpassword2">请再次输入密码</string>
    <string name="modify_success">密码设置成功</string>
    <string name="modify_error">密码不匹配,请重新输入</string>
	<string name="load_info">正在加载程序列表,请稍候 &#8230;</string>
	<string name="app_intercept">应用程序拦截</string>
	
	<string name="cancel">"取消"</string>
    <string name="lock_example_title">"示例图案"</string>
    <string name="lock_example_message">"至少连接四个点。"\n\n"您准备好绘制自己的解锁图案时，请触摸“下一步”。"</string>
     <string name="skip_button_label">"取消"</string>
     <string name="lock_title">"手机安全设置"</string>
     <string name="next_button_label">"下一步"</string>
     <string name="lock_intro_message" ><font size="17">"创建个人屏幕的解锁图案，防止手机被人擅自使用。"\n<font height="17">\n</font><b>"1"</b>"  在下一屏幕上，观看示例图案的绘制过程。"\n<font height="17">\n</font><b>"2"</b>"  准备就绪后，绘制您自己的个人解锁图案。可尝试不同的图案，但至少要连接四个点。"\n<font height="17">\n</font><b>"3"</b>"  再次绘制您的图案进行确认。"\n<font height="17">\n</font><b>"准备好要开始了吗？请触摸“下一步”"</b>"。"\n<font height="3">\n</font>"如果不想改变手机的无保护状态，请触摸“取消”。"</font></string>
    <string name="lockpattern_restart_button_text">"重新绘制"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指。"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_recording_intro_footer">"按“菜单”获得帮助。"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接 <xliff:g id="NUMBER">%d</xliff:g> 个点，请重试："</string>
	<string name="lockpattern_pattern_entered_header">"图案已记录！"</string>
	<string name="lockpattern_need_to_confirm">"再次绘制图案进行确认："</string>
	<string name="lockpattern_need_to_unlock_wrong">"很抱歉，请重试："</string>
	<string name="lockpattern_pattern_confirmed_header">"您的新解锁图案："</string>
	
	<string name="menu_open">打开</string>
	<string name="menu_move">从列表中移除</string>
	<string name="menu_uninstall">卸载</string>
	<string name="app_filter">过滤列表</string>
	<string name="menu_add">从已过滤的列表中移除</string>
	<string name="app_setting">设置</string>
	<string name="setting_pattern">图案解锁</string>
	<string name="setting_screen">设置锁屏</string>
	<string name="setting_resetlist">列表重置</string>
	 <string name="app_filter_info">以下程序将直接打开</string>   
	 <string name="setting_resetlist_info">列表重置成功 &#8230;</string>   
	 
</resources>